--- a/jaklis/.env.template
+++ b/jaklis/.env.template
@@ -1,8 +1,8 @@
 # Chemin de la clé privé Ḡ1 de l'émetteur, au format PubSec
-DUNIKEY=
+DUNIKEY=/.secret.dunikey
 
 # Noeud Duniter
-NODE=https://g1.librelois.fr/gva
+NODE=https://g1.copylaradio.com/gva
 
 # Adresse du pod Cesium ou Gchange à utiliser
 POD=https://g1.data.le-sou.org
